--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "react"
     ],
     "rules": {
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
